--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
-.App {
-  text-align: center;
-}
+*{
+  margin: 0;
+  padding: 0;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root{
+  --primary-color: rgb(15, 15, 15);
+  --seconday-color: rgba(255, 255, 255, 0.747);
+  --primary-color-shade: grey;
+  --accent:  rgb(214, 54, 0);
+  --accent2:rgb(233, 112, 72);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 55%, rgba(47,47,47,1) 100%);
+  color: var(--seconday-color);
+
+}
+.App-header{
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  width: calc(100% - 100px);
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 55%, rgba(47,47,47,1) 100%);
+  color: var(--seconday-color);
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 50px;
+  z-index: 0;
+}
+.App-logo{
+  filter: invert(1);
+}
+.navi{
+  padding: 0 40px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--seconday-color);
+}
+.navi:not(.navi-out):hover{
+  color: var(--primary-color-shade);
+  border-bottom: solid 1px var(--primary-color-shade);
+}
+.navi-out{
+  background-color: var(--accent);
+  color: var(--seconday-color);
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+.navi-out:hover{
+  background-color: var(--accent2);
+}
+.App-main{
+  margin-top: 60px;
+}
+.App-intro{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 40px
+}
+.phone{
+  z-index: 10;
+}
+h1{
+  font-weight: bold;
+  font-size: 40px;
+  padding-bottom: 20px;
+}
+h2{
+  font-weight: bold;
+  font-size: 30px;
+}
+.typewriter h2 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid var(--accent2); /* The typwriter cursor */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
 }
 
-.App-link {
-  color: #61dafb;
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: var(--accent2); }
+}
+.gg{
+  color: var(--accent);
 }
